--- a/style.css
+++ b/style.css
@@ -2323,3 +2323,8 @@ footer {
         width: 600px;
     }
 }
+@media only screen and (width: 600px) {
+    .slides img {
+        width: 600px;
+    }
+}
