--- a/style.css
+++ b/style.css
@@ -2318,6 +2318,11 @@ footer {
         width: 1080px;
     }
 }
+@media only screen and (width: 1080px) {
+    .slides img {
+        width: 1080px;
+    }
+}
 @media screen and (width: 600px) {
     .slides img {
         width: 600px;
