--- a/style.css
+++ b/style.css
@@ -2333,3 +2333,10 @@ footer {
         width: 600px;
     }
 }
+@media only screen and (max-width: 1080px) and (max-height: 2340px) {
+  /* Estilos para o Redmi Note 8 */
+    .slides img {
+        width: 1080px;
+    }
+}
+
