--- a/style.css
+++ b/style.css
@@ -2339,4 +2339,8 @@ footer {
         width: 1080px;
     }
 }
-
+@media screen and (max-width: 768px) {
+    .slides img {
+        width:100%;
+        max-width: 100%;
+}
