--- a/style.css
+++ b/style.css
@@ -2355,3 +2355,9 @@ footer {
         width: 100%;
         max-width: 375px;
     }
+  }
+@media screen and (width: 370px) {
+    .slides img {
+        width: 370px;
+        max-width: 370px;
+    }
