--- a/style.css
+++ b/style.css
@@ -1410,7 +1410,7 @@ footer {
         width: 100%;
     }
     .slides img {
-        width: 320px;
+        width: 100%;    
         min-width: 320px;
         max-width: 480px;
         border-radius: 15px;
@@ -1620,10 +1620,9 @@ footer {
     }
     .imgsobre {
         display: flex;
+        margin: 50px;
     }
-    .imgsobre img:nth-child(2) {
-        margin-left: -117px;
-    }
+    
     .mvv {
         width: 100%;
         height: auto;
@@ -1696,7 +1695,7 @@ footer {
         min-width: 480px;
         max-width: 768px;
         border-radius: 15px;
-        width: 480px;
+        width: 100%;
        
     }
     .location {
@@ -1806,8 +1805,9 @@ footer {
     }
 
     .slider img {
-        width: 768px;
+        width: 100%;
         min-width: 666px;
+        max-width: 768px;
     }
     
 }
@@ -1875,7 +1875,7 @@ footer {
     }
     .imgsobre {
         display: flex;
-        margin: 5% 14% 12% 5%;
+        margin: 20px;
         gap: 2.8rem;
     }
     
@@ -2010,33 +2010,17 @@ footer {
     }
 
 }
-
-@media screen and (width:375px) {
-    .slides img {
-        width: 375px;
-        
-    }
-    .form {
-        background-size: cover;
-        margin-top: -10px;
-        margin-bottom: 20px
-    }
-    .mvv-txt1 {
-        font-size: 100%;
-    }
-    .mvv-txt2 {
-        font-size: 100%;
-    }
-    .mvv-txt3 {
-        font-size: 100%;
-    }
-    .imgsobre img {
-        margin:  10px auto;
+@media screen and (width: 768px){
+    .slides img{
+        width: 100%;
+        max-width: 768px;
     }
 }
+
 @media screen and (width:414px) {
     .slides img {
-        width: 414px;
+        width: 100%;
+        max-width: 414px;
         
     }
     .form {
@@ -2171,32 +2155,10 @@ footer {
         margin:  10px auto;
     }
 }
-@media screen and (width:360px) {
-    .slides img {
-        width: 360px;
-        
-    }
-    .form {
-        background-size: cover;
-        margin-top: -10px;
-        margin-bottom: 20px
-    }
-    .mvv-txt1 {
-        font-size: 100%;
-    }
-    .mvv-txt2 {
-        font-size: 100%;
-    }
-    .mvv-txt3 {
-        font-size: 100%;
-    }
-    .imgsobre img {
-        margin:  10px auto;
-    }
-}
+
 @media screen and (width:820px) {
     .slides img {
-        width: 803px;
+        width: 820px;
         
     }
    
@@ -2309,16 +2271,11 @@ footer {
     }
 }
 @media screen and (width: 930px) {
-    .slider img {
+    .slides img {
         width:930px;
     }
 }
 @media screen and (width: 1080px) {
-    .slides img {
-        width: 1080px;
-    }
-}
-@media only screen and (width: 1080px) {
     .slides img {
         width: 1080px;
     }
@@ -2328,36 +2285,79 @@ footer {
         width: 600px;
     }
 }
-@media only screen and (width: 600px) {
-    .slides img {
-        width: 600px;
-    }
-}
 @media only screen and (max-width: 1080px) and (max-height: 2340px) {
-  /* Estilos para o Redmi Note 8 */
-    .slides img {
-        width: 1080px;
-    }
-}
-@media screen and (max-width: 768px) {
-    .slides img {
-        width:100%;
-        max-width: 100%;
-}
-@media screen and (max-width: 360px) {
-    .slides img {
-        width: 100%;
-        max-width: 360px;
-    }
+    /* Estilos para o Redmi Note 8 */
+      .slides img {
+          width: 1080px;
+      }
   }
-  @media screen and (max-width: 375px) {
+  
+
+
+@media only screen and (min-width: 360px) and (max-width: 375px) {
+    .imgsobre {
+        display: flex;
+        justify-content: center;
+    }
     .slides img {
-        width: 100%;
+        width: 375px;
+        min-width: 360px;
         max-width: 375px;
     }
-  }
-@media screen and (width: 370px) {
-    .slides img {
-        width: 370px;
-        max-width: 370px;
+    .contato {
+        width: 100%;
+        height: 100%;
+        
     }
+   
+    .form  {
+        width: 100%;
+        height: 100vh;
+        margin: 0 auto 30px;
+    }
+    .box-contact {
+        width: 100%;       
+    }
+    
+    
+}
+
+@media screen and (width: 320px) {
+    .slides img {
+        width: 100%;
+    }
+}
+
+@media screen and (width: 360px) {
+    .slides img {
+        width: 100%;
+    }
+}
+@media screen and (width: 375px) {
+    .slides img {
+        width: 375px;
+    }
+}
+@media screen and (width: 425px) {
+    .imgsobre {
+        display: flex;
+        justify-content: center;
+    }
+    .slides img {
+        width: 425px;
+    }
+    .contato {
+        width: 100%;
+        height: 100%;
+        
+    }
+   
+    .form  {
+        width: 100%;
+        height: 100vh;
+        margin: 0 auto 30px;
+    }
+    .box-contact {
+        width: 100%;       
+    }
+}
