--- a/style.css
+++ b/style.css
@@ -1116,9 +1116,9 @@ footer {
         width: 100%;
     }
     .slides img {
-        min-width: 150px;
+        min-width: 200px;
         max-width: 320px;
-        width: 319px;
+        width: 100%;
         height: 320px;
         border-radius: 15px;
        
